--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name" : "website-using-express",
-  "version" : "0.0.1",
-  "scripts" : {
-    "start" : "node server.js"
+  "name": "website-using-express",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node server.js"
   },
-  "dependencies" : {
-    "express" : "latest"
+  "dependencies": {
+    "bootstrap": "4.3.1",
+    "express": "latest",
+    "jquery": "3.4.1",
+    "nodemon": "^1.19.3",
+    "reload": "^3.0.1"
+  },
+  "devDependencies": {
+    "browser-sync": "2.26.7",
+    "del": "^4.1.1",
+    "gulp": "4.0.2",
+    "merge-stream": "2.0.0"
   }
 }
