--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
-    "express": "latest",
-    "jquery": "3.4.1",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "nodemon": "^1.19.3",
+    "package.json": "^2.0.1",
     "reload": "^3.0.1"
   },
   "devDependencies": {
-    "browser-sync": "2.26.7",
+    "browser-sync": "^2.26.14",
     "del": "^4.1.1",
     "gulp": "4.0.2",
     "merge-stream": "2.0.0"
